--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios-mock-adapter": "^1.20.0",
     "core-js": "^3.6.5",
     "eslint-config-prettier": "^8.3.0",
     "lodash": "^4.17.15",
@@ -21,12 +22,12 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/test-utils": "^1.0.3",
+    "axios": "^0.18.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^2.2.1",
-    "vue-cli-plugin-lodash": "~0.1.4",
     "vue-template-compiler": "^2.6.11"
   }
 }
